--- a/BT_CRUD_Express_Mongoose_MongoDB/package.json
+++ b/BT_CRUD_Express_Mongoose_MongoDB/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mongoose": "^8.6.0"
+    "mongoose": "^8.6.0",
+    "mongoose-sequence": "^6.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
